# race-overlay

./: .gitignore  README.md  handoff.md  overlay.yaml  pyproject.toml
.github/workflows/: ci-coverage.yml
.serena/: project.yml
docs/superpowers/plans/: 2026-04-20-hud-render-parity.md  (+11 more)
src/race_overlay/: alignment.py  benchmark.py  cli.py  config.py  editor_preview.py  editor_render.py  editor_server.py  ffmpeg.py  hud.py  hud_presets.py  hud_schema.py  models.py  pipeline.py  rotation.py  sampling.py  video_library.py  video_probe.py
tests/: test_alignment.py  test_benchmark.py  test_cli.py  test_config.py  test_editor.py  test_ffmpeg.py  test_fit_reader.py  test_hud.py  test_hud_presets.py  test_hud_schema.py  test_pipeline.py  test_portability_contract.py  test_rotation.py  test_sampling.py  test_tcx_reader.py  test_video_probe.py
tests/fixtures/: portability_contract.json  portable_laps.tcx  sample_activity.tcx
web/: README.md  index.html  package-lock.json  package.json  tsconfig.examples.json  tsconfig.lib.json  vite.lib.config.ts
web/examples/: evidence-matrix.template.json  host-integration.tsx
web/scripts/: evaluate-portability-evidence.mjs  scaffold-portability-evidence.mjs  verify-package-consumer.mjs  verify-portability.mjs
web/src/: App.test.tsx  App.tsx  evaluateEvidenceCli.test.ts  evidenceMatrixTemplate.test.ts  index.ts  packageBuildArtifacts.test.ts  packageManifest.test.ts  packageReadme.test.ts  portabilityMeasurementEvidence.test.ts  portabilityReadinessReport.test.ts  publicApi.test.ts  scaffoldPortabilityEvidence.test.ts  styles.css
(+62 files in other folders)
